zetasql/parser/testdata/grouping_sets.test
SELECT x, SUM(y) FROM T GROUP BY GROUPING SETS(x);
--
QueryStatement [0-49] [SELECT x,...GROUPING SETS(x)]
  Query [0-49] [SELECT x,...GROUPING SETS(x)]
    Select [0-49] [SELECT x,...GROUPING SETS(x)]
      SelectList [7-16] [x, SUM(y)]
        SelectColumn [7-8] [x]
          PathExpression [7-8] [x]
            Identifier(x) [7-8] [x]
        SelectColumn [10-16] [SUM(y)]
          FunctionCall [10-16] [SUM(y)]
            PathExpression [10-13] [SUM]
              Identifier(SUM) [10-13] [SUM]
            PathExpression [14-15] [y]
              Identifier(y) [14-15] [y]
      FromClause [17-23] [FROM T]
        TablePathExpression [22-23] [T]
          PathExpression [22-23] [T]
            Identifier(T) [22-23] [T]
      GroupBy [24-49] [GROUP BY GROUPING SETS(x)]
        GroupingItem [33-49] [GROUPING SETS(x)]
          GroupingSets [33-49] [GROUPING SETS(x)]
            PathExpression [47-48] [x]
              Identifier(x) [47-48] [x]
--
SELECT
  x,
  SUM(y)
FROM
  T
GROUP BY GROUPING SETS(x)
==

SELECT x, y, GROUPING(x) = 1, IF(GROUPING(y) = 0, "foo", "bar")
FROM T GROUP BY GROUPING SETS(x, y);
--
QueryStatement [0-99] [SELECT x,...SETS(x, y)]
  Query [0-99] [SELECT x,...SETS(x, y)]
    Select [0-99] [SELECT x,...SETS(x, y)]
      SelectList [7-63] [x, y, GROUPING...foo", "bar")]
        SelectColumn [7-8] [x]
          PathExpression [7-8] [x]
            Identifier(x) [7-8] [x]
        SelectColumn [10-11] [y]
          PathExpression [10-11] [y]
            Identifier(y) [10-11] [y]
        SelectColumn [13-28] [GROUPING(x) = 1]
          BinaryExpression(=) [13-28] [GROUPING(x) = 1]
            FunctionCall [13-24] [GROUPING(x)]
              PathExpression [13-21] [GROUPING]
                Identifier(`GROUPING`) [13-21] [GROUPING]
              PathExpression [22-23] [x]
                Identifier(x) [22-23] [x]
            IntLiteral(1) [27-28] [1]
        SelectColumn [30-63] [IF(GROUPING...foo", "bar")]
          FunctionCall [30-63] [IF(GROUPING...foo", "bar")]
            PathExpression [30-32] [IF]
              Identifier(`IF`) [30-32] [IF]
            BinaryExpression(=) [33-48] [GROUPING(y) = 0]
              FunctionCall [33-44] [GROUPING(y)]
                PathExpression [33-41] [GROUPING]
                  Identifier(`GROUPING`) [33-41] [GROUPING]
                PathExpression [42-43] [y]
                  Identifier(y) [42-43] [y]
              IntLiteral(0) [47-48] [0]
            StringLiteral("foo") [50-55] ["foo"]
            StringLiteral("bar") [57-62] ["bar"]
      FromClause [64-70] [FROM T]
        TablePathExpression [69-70] [T]
          PathExpression [69-70] [T]
            Identifier(T) [69-70] [T]
      GroupBy [71-99] [GROUP BY GROUPING SETS(x, y)]
        GroupingItem [80-99] [GROUPING SETS(x, y)]
          GroupingSets [80-99] [GROUPING SETS(x, y)]
            PathExpression [94-95] [x]
              Identifier(x) [94-95] [x]
            PathExpression [97-98] [y]
              Identifier(y) [97-98] [y]
--
SELECT
  x,
  y,
  `GROUPING`(x) = 1,
  `IF`(`GROUPING`(y) = 0, "foo", "bar")
FROM
  T
GROUP BY GROUPING SETS(x, y)

==

select x, SUM(y) FROM T GROUP @{hint_name=5} BY GROUPING SETS(x);
--
QueryStatement [0-64] [select x,...GROUPING SETS(x)]
  Query [0-64] [select x,...GROUPING SETS(x)]
    Select [0-64] [select x,...GROUPING SETS(x)]
      SelectList [7-16] [x, SUM(y)]
        SelectColumn [7-8] [x]
          PathExpression [7-8] [x]
            Identifier(x) [7-8] [x]
        SelectColumn [10-16] [SUM(y)]
          FunctionCall [10-16] [SUM(y)]
            PathExpression [10-13] [SUM]
              Identifier(SUM) [10-13] [SUM]
            PathExpression [14-15] [y]
              Identifier(y) [14-15] [y]
      FromClause [17-23] [FROM T]
        TablePathExpression [22-23] [T]
          PathExpression [22-23] [T]
            Identifier(T) [22-23] [T]
      GroupBy [24-64] [GROUP @{hint_name...NG SETS(x)]
        Hint [30-44] [@{hint_name=5}]
          HintEntry [32-43] [hint_name=5]
            Identifier(hint_name) [32-41] [hint_name]
            IntLiteral(5) [42-43] [5]
        GroupingItem [48-64] [GROUPING SETS(x)]
          GroupingSets [48-64] [GROUPING SETS(x)]
            PathExpression [62-63] [x]
              Identifier(x) [62-63] [x]
--
SELECT
  x,
  SUM(y)
FROM
  T
GROUP @{ hint_name = 5 } BY GROUPING SETS(x)

==

select x, y, z, GROUPING (
x)
FROM T
GROUP BY 1, 2, GROUPING SETS (
x + 2, y = 'foo', z), z, x, GROUPING SETS(y, x
);
--
QueryStatement [0-116] [select x,...SETS(y, x )]
  Query [0-116] [select x,...SETS(y, x )]
    Select [0-116] [select x,...SETS(y, x )]
      SelectList [7-29] [x, y, z, GROUPING ( x)]
        SelectColumn [7-8] [x]
          PathExpression [7-8] [x]
            Identifier(x) [7-8] [x]
        SelectColumn [10-11] [y]
          PathExpression [10-11] [y]
            Identifier(y) [10-11] [y]
        SelectColumn [13-14] [z]
          PathExpression [13-14] [z]
            Identifier(z) [13-14] [z]
        SelectColumn [16-29] [GROUPING ( x)]
          FunctionCall [16-29] [GROUPING ( x)]
            PathExpression [16-24] [GROUPING]
              Identifier(`GROUPING`) [16-24] [GROUPING]
            PathExpression [27-28] [x]
              Identifier(x) [27-28] [x]
      FromClause [30-36] [FROM T]
        TablePathExpression [35-36] [T]
          PathExpression [35-36] [T]
            Identifier(T) [35-36] [T]
      GroupBy [37-116] [GROUP BY 1...SETS(y, x )]
        GroupingItem [46-47] [1]
          IntLiteral(1) [46-47] [1]
        GroupingItem [49-50] [2]
          IntLiteral(2) [49-50] [2]
        GroupingItem [52-88] [GROUPING SETS...'foo', z)]
          GroupingSets [52-88] [GROUPING SETS...'foo', z)]
            BinaryExpression(+) [68-73] [x + 2]
              PathExpression [68-69] [x]
                Identifier(x) [68-69] [x]
              IntLiteral(2) [72-73] [2]
            BinaryExpression(=) [75-84] [y = 'foo']
              PathExpression [75-76] [y]
                Identifier(y) [75-76] [y]
              StringLiteral('foo') [79-84] ['foo']
            PathExpression [86-87] [z]
              Identifier(z) [86-87] [z]
        GroupingItem [90-91] [z]
          PathExpression [90-91] [z]
            Identifier(z) [90-91] [z]
        GroupingItem [93-94] [x]
          PathExpression [93-94] [x]
            Identifier(x) [93-94] [x]
        GroupingItem [96-116] [GROUPING SETS(y, x )]
          GroupingSets [96-116] [GROUPING SETS(y, x )]
            PathExpression [110-111] [y]
              Identifier(y) [110-111] [y]
            PathExpression [113-114] [x]
              Identifier(x) [113-114] [x]
--
SELECT
  x,
  y,
  z,
  `GROUPING`(x)
FROM
  T
GROUP BY 1, 2, GROUPING SETS(x + 2, y = 'foo', z), z, x, GROUPING SETS(y, x)

==

select x FROM T GROUP BY GROUPING SETS();
--
ERROR: Syntax error: Unexpected ")" [at 1:40]
select x FROM T GROUP BY GROUPING SETS();
                                       ^

==

select x FROM T GROUP BY GROUPING SETS(x;
--
ERROR: Syntax error: Expected ")" or "," but got ";" [at 1:41]
select x FROM T GROUP BY GROUPING SETS(x;
                                        ^
==

select x FROM T GROUP BY GROUPING SETS x;
--
ERROR: Syntax error: Expected "(" but got identifier "x" [at 1:40]
select x FROM T GROUP BY GROUPING SETS x;
                                       ^
==

select x FROM T GROUP BY GROUPING SETS;
--
ERROR: Syntax error: Expected "(" but got ";" [at 1:39]
select x FROM T GROUP BY GROUPING SETS;
                                      ^

==

select x FROM T GROUP BY x, y WITH GROUPING SETS;
--
ERROR: Syntax error: Expected end of input but got keyword WITH [at 1:31]
select x FROM T GROUP BY x, y WITH GROUPING SETS;
                              ^
==

select `grouping sets` FROM T GROUP BY `grouping sets`;
--
QueryStatement [0-54] [select `grouping...uping sets`]
  Query [0-54] [select `grouping...uping sets`]
    Select [0-54] [select `grouping...uping sets`]
      SelectList [7-22] [`grouping sets`]
        SelectColumn [7-22] [`grouping sets`]
          PathExpression [7-22] [`grouping sets`]
            Identifier(`grouping sets`) [7-22] [`grouping sets`]
      FromClause [23-29] [FROM T]
        TablePathExpression [28-29] [T]
          PathExpression [28-29] [T]
            Identifier(T) [28-29] [T]
      GroupBy [30-54] [GROUP BY `grouping sets`]
        GroupingItem [39-54] [`grouping sets`]
          PathExpression [39-54] [`grouping sets`]
            Identifier(`grouping sets`) [39-54] [`grouping sets`]
--
SELECT
  `grouping sets`
FROM
  T
GROUP BY `grouping sets`
